--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Extension to the RowExpander UX from ExtJS to include an expand/collapse all option.
-
+extension to the RowExpander UX from ExtJS to include an expand/collapse all option.
+ExtJS 4.1 Compatible
