--- a/README
+++ b/README
@@ -1,3 +1,8 @@
-extension to the RowExpander UX from ExtJS to include an expand/collapse all option.
+RowExpander
+===========
+
+Extension to the RowExpander UX from ExtJS that utilizes the column header to expand/collapse all rows.
 
 ExtJS 4.1 Compatible
+
+[Forum]: http://www.sencha.com/forum/showthread.php?184540-RowExpander-including-expand-collapse-all-via-header&p=746066
